# Modern_Ai_Python

01-Python/: Functions.py
01-Python/Python-Projects/Growth-Mind-Set-App/: app.py  requirements.txt
01-Python/Python-Projects/Growth-Mind-Set-App/.streamlit/: secrets.toml
01-Python/Python-Projects/Growth-Mind-Set-App/form/: contact.py
01-Python/Python-Projects/Growth-Mind-Set-App/views/: Colour-Palatte-Generator.py  Personal-Library-Manager.py  Possword-Strenght-Meter.py  Unit-Converter.py  about_me.py
01-Python/Python-Projects/Personal-Library-Manager/: PersonalLibraryManager.py
01-Python/Python-Projects/Project-Assignments/OOPs/: main.py  practice.py
02-uv/hello-uv/: main.py  pyproject.toml
03-vibe_coding/: README.md
03-vibe_coding/00-calculator_using_cursor_tab/: pyproject.toml
03-vibe_coding/00-calculator_using_cursor_tab/src/00_calculator_using_cursor_tab/: calculator.py  usage.py
04-streamlit_ui/00_heloworld/: hello.py
04-streamlit_ui/01_magic/: magic.py
04-streamlit_ui/03_bmi_calculator/: bmi.py
04-streamlit_ui/04_multipages_app/: Home.py
04-streamlit_ui/04_multipages_app/Pages/: About_Us.py  Profile.py
05-hello_genai/00-hello_chatgpt/: Readme.md
05-hello_genai/01-litellm/: Readme.md
05-hello_genai/01-litellm/00-my_project/myproject/: pyproject.toml
