[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hamzanasir123", email = "hk435981@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.70.2",
]

[project.scripts]
myproject = "myproject:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
